Refactores primitive types in the API. Now int -> Integer and double -> Double. This is to support Redis null values